# stm32n6-mx66uw1g45g

./: .gitignore  Cargo.toml  README.md  link.x  template.yaml
.cargo/: config.toml
src/: lib.rs  main.rs
