[package]
name = "stm32n6-mx66uw1g45g"
version = "0.1.0"
edition = "2021"

[workspace]

[features]
default = []
rtt = ["rtt-target"]
# Minimal algorithm that returns immediately - for testing if algorithm can start executing
probe-only = []

[dependencies]
cortex-m = "0.7.6"
flash-algorithm = { path = "/Users/tobias.breitwieser/tmp/probe-rs/flash-algorithm", features = [
    "erase-chip",
    "verify",
    "blank-check",
] }
rtt-target = { version = "0.3", features = ["cortex-m"], optional = true }
stm32-metapac = { path = "/Users/tobias.breitwieser/tmp/embassy-rs/stm32-data/build/stm32-metapac", features = [
    "stm32n657x0",
    "pac",
] }

# this lets you use `cargo fix`!
[lib]
test = false
bench = false

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 's'
overflow-checks = false
