[package]
name = "stm32n6-mx66uw1g45g"
version = "0.1.0"
edition = "2024"

[workspace]

[features]
default = []

[dependencies]
cortex-m = "0.7.6"
flash-algorithm = { git = "https://github.com/probe-rs/flash-algorithm", version = "0.7", features = [
    "erase-chip",
    "verify",
    "blank-check",
] }
stm32-metapac = { git = "https://github.com/embassy-rs/stm32-data-generated", version = "21", features = [
    "stm32n657x0",
    "pac",
] }

# this lets you use `cargo fix`!
[lib]
test = false
bench = false

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "z"
overflow-checks = false
